# www

./: .gitignore  404.html  CNAME  README.md  _index.html  archive.html  demo.html  go.html  index.html  main.py  miscellaneous.html  mkdocs.yml  presentation.html  pyproject.toml  rackup  rackup.sh  research.html  showcase.html  sitemap.xml  snapshot.bat  snapshot2.bat
.github/workflows/: deploy.yml
LEGACY/home/: _blogs.md  _research.md
aboutme/: index.html
archive/: 150714세조의약론.md  KM_서적.md  KM_인물.md  contingencyTable.md  copyright.md  docTools.md  intro.md  labCode.md  labJS.md  labR.md  labRuby.md  labTKM.md  list.md  sidebar.md  softcover설치.md  test.md  식치관련서.md
assets/css/: showcase.css
data/: demo.yaml  demoData.js  demoList.html  researchData.js  showcase.yaml  showcaseData.js
data/demo/: HF-IFF.html
demo/: hf-idf.html  hf-iff.html
docs/: aboutme.md  index.md  robots.txt  zayosoft.md
docs/home/: _blogs.md  research.md
home/_blogs/: index.html
home/_demos/: index.html
home/_projects/: index.html
home/_research/: index.html
include/: showcase_item.html
public/css/: 2-col-portfolio.css  indexDefault.css
public/js/: ga.js
public/mdShow/: highlight.pack.js  mdCustom.css  mdDoc.html  ng-marked.js  showMD.js
public/ngmodules/: ng-underscore.js
research/: myPaperList.js  research.html
search/: search_index.json
showcase/: _showcase.html  showcase.html
spa/: converter.html
spa/auth/: app.js  index.html
spa/combinator/: combinator.html  combinator.js
spa/converter/: converter.js
spa/jukebox/: you4.js  (+10 more)
zayosoft/: index.html
(+65 files in other folders)
